--- a/app/src/main/res/layout/activity_consultar_usuario.xml
+++ b/app/src/main/res/layout/activity_consultar_usuario.xml
@@ -30,9 +30,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="25dp"
         android:gravity="bottom"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,44 +39,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layoutId"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:hint="Identificador"
-                android:textColorHint="#939191"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="0dp"
-                app:endIconMode="clear_text"
-                app:endIconTint="#1976D2"
-                app:startIconDrawable="@drawable/baseline_person_24"
-                app:startIconTint="#0288D1">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txt_id"
-                    android:layout_width="187dp"
-                    android:layout_height="65dp"
-                    android:inputType="number" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/btn_buscar"
-                android:layout_width="184dp"
-                android:layout_height="65dp"
-                android:layout_weight="1"
-                android:backgroundTint="#0288D1"
-                android:onClick="buscarUsuario"
-                android:text="Buscar" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="305dp"
@@ -172,13 +133,6 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/sp_nacionalidad"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autofillHints="Seleccione" />
-
 
                 <Spinner
                     android:id="@+id/sp_genero"
@@ -186,72 +140,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/txt_estado2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/meditative"
-                android:text="Estado Civil"
-                android:textSize="18sp" />
-
-            <RadioGroup
-                android:id="@+id/rbd_EstadoCivil"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-
-                <RadioButton
-                    android:id="@+id/rbd_casado"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Casado" />
-
-                <RadioButton
-                    android:id="@+id/rbd_soltero"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Soltero" />
-
-                <RadioButton
-                    android:id="@+id/rbd_divorciado"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Divoriado" />
-
-            </RadioGroup>
-
-            <LinearLayout
-                android:id="@+id/layoutDate"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/txt_fechas"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="fecha de nacimiento"
-                    android:inputType="text" />
-
-                <ImageButton
-                    android:id="@+id/btn_Fecha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
             </LinearLayout>
 
@@ -289,6 +177,30 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="phone" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutDireccion"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Direccion"
+                    android:textColorHint="#8F8E8E"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="100"
+                    app:endIconMode="clear_text"
+                    app:endIconTint="#0288D1"
+                    app:startIconCheckable="true"
+                    app:startIconContentDescription="100"
+                    app:startIconDrawable="@drawable/baseline_store_mall_directory_24"
+                    app:startIconTint="#0288D1">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txt_direccion"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text|textPersonName" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
