--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -134,13 +134,6 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/sp_nacionalidad"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autofillHints="Seleccione" />
-
 
                 <Spinner
                     android:id="@+id/sp_genero"
@@ -148,72 +141,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/txt_estado2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/meditative"
-                android:text="Estado Civil"
-                android:textSize="18sp" />
-
-            <RadioGroup
-                android:id="@+id/rbd_EstadoCivil"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-
-                <RadioButton
-                    android:id="@+id/rbd_casado"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Casado" />
-
-                <RadioButton
-                    android:id="@+id/rbd_soltero"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Soltero" />
-
-                <RadioButton
-                    android:id="@+id/rbd_divorciado"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="onRadioButtonClicked"
-                    android:text="Divoriado" />
-
-            </RadioGroup>
-
-            <LinearLayout
-                android:id="@+id/layoutDate"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/txt_fecha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="fecha"
-                    android:inputType="text" />
-
-                <ImageButton
-                    android:id="@+id/btn_Fecha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
             </LinearLayout>
 
@@ -251,6 +178,30 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="phone" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/layoutDireccion"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Direccion"
+                        android:textColorHint="#8F8E8E"
+                        app:boxCornerRadiusTopEnd="10dp"
+                        app:boxCornerRadiusTopStart="10dp"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="100"
+                        app:endIconMode="clear_text"
+                        app:endIconTint="#0288D1"
+                        app:startIconCheckable="true"
+                        app:startIconContentDescription="100"
+                        app:startIconDrawable="@drawable/baseline_store_mall_directory_24"
+                        app:startIconTint="#0288D1">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/txt_direccion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text|textPersonName" />
+                    </com.google.android.material.textfield.TextInputLayout>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
@@ -277,12 +228,43 @@
 
             </LinearLayout>
 
-            <CheckBox
-                android:id="@+id/checkBox2"
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Acepto términos y condiciones"
-                android:textSize="17sp" />
+                android:fontFamily="@font/meditative"
+                android:text="Ingrese Contraseña"
+                android:textSize="25sp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutpassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Contraseña"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="15"
+                app:endIconMode="password_toggle"
+                app:endIconTint="#0288D1"
+                app:hintTextColor="#9E9A9A"
+                app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
+                app:startIconTint="#0288D1">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txt_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text|textPassword" />
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
@@ -321,4 +303,5 @@
         </LinearLayout>
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
