Se agrega funcionalidad de filtrar productos

--- a/app/src/main/res/layout/activity_productos.xml
+++ b/app/src/main/res/layout/activity_productos.xml
@@ -66,7 +66,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <ImageButton
-                android:id="@+id/button_icon"
+                android:id="@+id/button_filterproducts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
