--- a/app/src/main/res/layout/activity_productos.xml
+++ b/app/src/main/res/layout/activity_productos.xml
@@ -15,16 +15,33 @@
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
-        <TextView
-            android:id="@+id/txt_formulario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#1976D2"
-            android:fontFamily="@font/meditative"
-            android:text="Productos"
-            android:textColor="#ffff"
-            android:textSize="30sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="6dp">
 
+            <TextView
+                android:id="@+id/txt_formulario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#1976D2"
+                android:fontFamily="@font/meditative"
+                android:text="Productos"
+                android:textColor="#ffff"
+                android:textSize="30sp" />
+
+            <ImageButton
+                android:id="@+id/button_main_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="?android:attr/selectableItemBackground"
+                android:padding="8dp"
+                android:src="@drawable/baseline_menu_24" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
