--- a/app/src/main/res/layout/activity_consultar_usuario.xml
+++ b/app/src/main/res/layout/activity_consultar_usuario.xml
@@ -250,7 +250,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#0288D1"
-                android:onClick="Salir"
+                android:onClick="CancelarRegistro"
                 android:text="Salir" />
 
         </LinearLayout>
