--- a/app/src/main/res/layout/item_product_in_shopping_cart.xml
+++ b/app/src/main/res/layout/item_product_in_shopping_cart.xml
@@ -74,6 +74,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:src="@drawable/minus" />
+
+                <ImageButton
+                    android:id="@+id/button_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/baseline_delete_24" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
